update to java 25, spring boot 4